--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ header {
     color: rgb(254, 148, 76);
     font-size: 60px;
 }
-.boton1 {
+.boton {
     background-color: rgb(254, 148, 76);
     font-size: 12px;
     border: none;
