--- a/styles/style.css
+++ b/styles/style.css
@@ -5,32 +5,79 @@
     box-sizing: border-box;/*el ancho total incluye padding y borde. Ajusta el contenido para que todo entre en el tamaño especificado*/
     font-family: "Roboto Slab", serif;
 }
+
+/*cabecera*/
 header {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('../assets/images/bgHeader.png');
     background-size: cover; /*Hace que la imagen cubra completamente el área del fondo.*/
     background-repeat: no-repeat;
-    background-position: bottom center;
+    background-position: bottom center; /*bottom: alinea la imagen con la parte inferior. center: centra la imagen horizontalmente*/
     flex-direction: column;
     justify-content: start;
     align-items: center;
 }
 .titulo {
     text-align: center;
-    margin: 100px;
+    margin-top: 100px;
+    margin-bottom: 135px;
 }
 .titulo h1 {
-    color: rgb(254, 148, 76);
-    font-size: 60px;
+    font-weight: 400;/*Sirve para cambiar el grosor de la letra*/
+    color: rgb(255, 137, 64);
+    font-size: 85px;
+}
+.titulo h3 {
+    font-weight: 400;/*Sirve para cambiar el grosor de la letra*/
+    font-size: 35px;
+}
+
+/*General*/
+a {
+    text-decoration: none;
 }
 .boton {
-    background-color: rgb(254, 148, 76);
-    font-size: 12px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background: linear-gradient(
+        90deg, rgb(255, 156, 80), rgb(255, 137, 64)
+    );
+    font-size: 15px;
     border: none;
-    padding: 10px;
-    border-radius: 20px;
+    cursor: pointer;
+    padding: 15px 30px; /*15 px de arriba y abajo. 30px de izquierda y derecha*/
+    border-radius: 40px;
     color: white;
-    width: 100px;
+    width: auto;
+}
+.seccion1 {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: end;
+    padding-bottom: 50px;
+    justify-content: center;
+}
+.texto{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    height: 100%;
+    margin-right: 100px;
+    width: 36%;
+    justify-content: end;
+    padding-bottom: 50px;
+}
+.texto h2 {
+    font-weight: 400;/*Sirve para cambiar el grosor de la letra*/
+    color: rgb(255, 155, 79);
+    font-size: 45px;
+}
+.texto p {
+    font-weight: 350;
+    color: rgb(98, 98, 98);
+    font-size: 20px;
 }
