--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ a {
     align-items: center;
     gap: 20px;
     background: linear-gradient(
-        90deg, rgb(255, 156, 80), rgb(255, 137, 64)
+        90deg, rgb(253, 159, 88), rgb(255, 137, 64)
     );
     font-size: 15px;
     border: none;
@@ -53,6 +53,19 @@ a {
     color: white;
     width: auto;
 }
+h2 {
+    font-weight: 400;/*Sirve para cambiar el grosor de la letra*/
+    color: rgb(255, 155, 79);
+    font-size: 40px;
+}
+p {
+    font-weight: 350;
+    color: rgb(98, 98, 98);
+    font-size: 18px;
+    line-height: 1.5;/*Interlineado*/
+}
+
+/*Seccion 1*/
 .seccion1 {
     display: flex;
     width: 100%;
@@ -66,18 +79,110 @@ a {
     flex-direction: column;
     gap: 40px;
     height: 100%;
-    margin-right: 100px;
-    width: 36%;
+    margin-right: 120px;
+    width: 34%;
     justify-content: end;
     padding-bottom: 50px;
 }
-.texto h2 {
+.imagen img{
+    height: 540px;
+}
+
+/*Seccion 2*/ 
+.seccion2 {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: start;
+    padding-top: 90px;
+}
+.texto2 {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    height: 100%;
+    margin-left: 180px;
+    width: 30%;
+    justify-content: start;
+    padding-bottom: 50px;
+}
+.texto2 h2{
     font-weight: 400;/*Sirve para cambiar el grosor de la letra*/
     color: rgb(255, 155, 79);
-    font-size: 45px;
+    font-size: 40px;
 }
-.texto p {
-    font-weight: 350;
-    color: rgb(98, 98, 98);
-    font-size: 20px;
+.imagen2 img {
+    height: 500px;
+}
+
+/*seccion 3*/
+.seccion3 {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    background-image: url('../assets/images/bgDown.png');
+    background-size: cover; /*Hace que la imagen cubra completamente el área del fondo.*/
+    background-repeat: no-repeat;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    padding-top: 80px;
+    padding-left: 100px;
+}
+.texto3 {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    height: 100%;
+    width: 40%;
+    justify-content: start;
+}
+.titulo3 {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+/*Footer*/
+footer {
+    display: flex;
+    flex-direction: column; 
+    background: linear-gradient(
+        90deg, rgb(254, 158, 85), rgb(255, 137, 64)
+    );
+}
+.cont-list {
+    display: flex;
+    justify-content: start;
+    padding: 60px;
+}
+.listas {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin: 30px;
+    margin-left: 150px;
+}
+.listas a {
+    letter-spacing: 0.5px; /*Espacio entre las letras*/
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+}
+.listas ul{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    letter-spacing: 0.5px;
+    font-size: 14px;
+    list-style-type: none;
+    color: rgb(255, 255, 255);
+}
+.footer2 {
+    text-align: center;
+    padding: 25px;
+    box-shadow: 0 -5px 25px rgba(0, 0, 0, 0.15);
+}
+.footer2 p {
+    font-size: 12px;
+    color: rgb(255, 255, 255);
 }
