--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ h2 {
 }
 p {
     font-weight: 350;
-    color: rgb(98, 98, 98);
+    color: rgb(70, 69, 69);
     font-size: 18px;
     line-height: 1.5;/*Interlineado*/
 }
@@ -120,33 +120,37 @@ p {
 .seccion3 {
     display: flex;
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     background-image: url('../assets/images/bgDown.png');
     background-size: cover; /*Hace que la imagen cubra completamente el área del fondo.*/
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    padding-top: 80px;
-    padding-left: 100px;
+    padding-top: 130px;
+    padding-left: 230px;
 }
 .texto3 {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     height: 100%;
-    width: 40%;
+    width: 50%;
     justify-content: start;
 }
 .titulo3 {
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 700;
+}
+.texto3 p {
+    width: 80%;
 }
 
 /*Footer*/
 footer {
     display: flex;
     flex-direction: column; 
+    width: 100%;
     background: linear-gradient(
         90deg, rgb(254, 158, 85), rgb(255, 137, 64)
     );
